# Advent-of-Code-2025

./: README.md  main.py  pyproject.toml
.github/workflows/: main.yml
aoc/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  utils.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py
