[project]
name = "aoc-2024"
version = "0.1.0"
description = "Advent of Code 2024 solutions in Python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "rich",        # pretty printing
    "pytest",      # testing
]
[tool.setuptools]
packages = ["aoc"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
aoc = "main:cli"

