[project]
name = "aoc-2025"
version = "0.1.0"
description = "Advent of Code 2025 solutions in Python"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "rich",        # pretty printing
    "pytest",      # testing
    "pyright",      #LSP
    "numpy",


]
[tool.setuptools]
packages = ["aoc"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
aoc = "main:cli"

